--- a/works.html
+++ b/works.html
@@ -14,9 +14,10 @@
     <header>
       <h1><a href="https://tana-mari.github.io/Panaka01/" style="font-size: 40px;">Panaka</a></h1>
 
+
       <nav>
         <ul class="list1 list-indent1">
-          <li><a href="works.html">WORKS</a></li>
+          <li><a href="#1">WORKS</a></li>
           <li><a href="#2">ABOUT</a></li>
           <li><a href="#3">CONTACT</a></li>
           <li><a href="#4">INSTAGRAM</a></li>
@@ -31,19 +32,13 @@
       <section>
 
         <article>
-          <img src="images/hana1.png" width="700" alt="花01" >
+          更新中です・・・
         </article>
 
-        <article>
-          <img src="images/hana2.png" width="700" alt="花02" >
-        </article>
+
 
         <article>
-          <img src="images/hana3.png" width="700" alt="花03" >
-        </article>
 
-        <article>
-          <img src="images/hana4.png" width="700" alt="花04" >
         </article>
 
 
