--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <header>
       <h1><a href="https://tana-mari.github.io/Panaka01/" style="font-size: 40px;">Panaka</a></h1>
 
+
       <nav>
         <ul class="list1 list-indent1">
           <li><a href="works.html">WORKS</a></li>
@@ -30,27 +31,20 @@
       <section>
 
         <article>
-          Photo<br><br>
-          <img src="images/hana1.png" width="700" alt="花01" >
+          こんにちは、Panakaです。
         </article>
 
-        <article>
-          <img src="images/hana2.png" width="700" alt="花02" >
-        </article>
+
 
         <article>
-          <img src="images/hana3.png" width="700" alt="花03" >
-        </article>
 
-        <article>
-          <img src="images/hana4.png" width="700" alt="花04" >
         </article>
 
 
 
 
         <aside>
-          これから更新していくので楽しみにしていてください。
+
         </aside>
 
       </section>
