--- a/works.html
+++ b/works.html
@@ -17,11 +17,10 @@
 
       <nav>
         <ul class="list1 list-indent1">
-          <li><a href="#1">WORKS</a></li>
-          <li><a href="#2">ABOUT</a></li>
-          <li><a href="#3">CONTACT</a></li>
+          <li><a href="works.html">WORKS</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
           <li><a href="#4">INSTAGRAM</a></li>
-          <li><a href="#5">TWITTER</a></li>
         </ul>
       </nav>
 
@@ -45,7 +44,7 @@
 
 
         <aside>
-          こんにちはTana Mariでした。
+          
         </aside>
 
       </section>
